# gram

./: .editorconfig  .gitattributes  .gitignore  .mailmap  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: ci-config.toml  config.toml
.config/: nextest.toml
.forgejo/issue_template/: config.yml  issue.md
.forgejo/workflows/: ci.yaml  release.yaml  testbuild.yaml
.github/workflows/: ci.yaml  release.yaml
.gram/: debug.jsonc  settings.jsonc  tasks.jsonc
assets/: registry.toml
assets/keymaps/: default-linux.jsonc  default-macos.jsonc  default-windows.jsonc  vim.jsonc
assets/settings/: default.jsonc  initial_tasks.jsonc  initial_user_settings.jsonc
crates/action_log/: Cargo.toml
crates/activity_indicator/: Cargo.toml
crates/app_actions/: Cargo.toml
crates/askpass/: Cargo.toml
crates/assets/: Cargo.toml
crates/assets/src/: assets.rs
crates/breadcrumbs/: Cargo.toml
crates/buffer_diff/: Cargo.toml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  user.rs
crates/clock/: Cargo.toml
crates/clock/src/: clock.rs
crates/collections/: Cargo.toml
crates/command_palette/: Cargo.toml
crates/command_palette_hooks/: Cargo.toml
crates/component/: Cargo.toml
crates/crashes/: Cargo.toml
crates/dap/: Cargo.toml
crates/dap_adapters/: Cargo.toml
crates/db/: Cargo.toml
crates/debug_adapter_extension/: Cargo.toml
crates/debugger_tools/: Cargo.toml
crates/debugger_tools/src/: dap_log.rs
crates/debugger_ui/: Cargo.toml
crates/diagnostics/: Cargo.toml
crates/docs/: Cargo.toml
crates/docs/src/: docs.rs
crates/editor/: Cargo.toml
crates/encoding_selector/: Cargo.toml
crates/encoding_selector/src/: active_buffer_encoding.rs
crates/explorer_command_injector/: Cargo.toml
crates/extension/: Cargo.toml
crates/extension_api/: Cargo.toml
crates/extension_cli/: Cargo.toml
crates/extension_host/: Cargo.toml
crates/extension_host/benches/: extension_compilation_benchmark.rs
crates/extension_host/src/: extension_host.rs  wasm_host.rs
crates/extension_host/src/wasm_host/: wit.rs
crates/extension_host/src/wasm_host/wit/: since_v0_0_1.rs  since_v0_0_4.rs  since_v0_0_6.rs  since_v0_1_0.rs  since_v0_2_0.rs  since_v0_3_0.rs  since_v0_4_0.rs  since_v0_5_0.rs  since_v0_6_0.rs
crates/extensions_ui/: Cargo.toml
crates/extensions_ui/src/: extension_suggest.rs  extensions_ui.rs
crates/extensions_ui/src/components/: extension_card.rs
crates/feedback/: Cargo.toml
crates/file_finder/: Cargo.toml
crates/file_icons/: Cargo.toml
crates/fs/: Cargo.toml
crates/fs/src/: fake_git_repo.rs  fs.rs  fs_watcher.rs
crates/fs_benchmarks/: Cargo.toml
crates/fuzzy/: Cargo.toml
crates/fuzzy/src/: strings.rs
crates/git/: Cargo.toml
crates/git_graph/: Cargo.toml
crates/git_hosting_providers/: Cargo.toml
crates/git_ui/: Cargo.toml
crates/go_to_line/: Cargo.toml
crates/gpui/: Cargo.toml  build.rs
crates/gpui_macros/: Cargo.toml
crates/gpui_tokio/: Cargo.toml
crates/gram/: Cargo.toml  build.rs
crates/gram/resources/: gram.desktop.in
crates/gram/resources/AppIcon.icon/: icon.json
crates/gram/resources/appimage/: recipe.yaml.in
crates/gram/resources/arch/: PKGBUILD.in
crates/gram/resources/flatpak/: gram.metainfo.xml.in  manifest-template.json
crates/gram/resources/windows/: gram.iss
crates/gram/src/: gram.rs  main.rs
crates/gram/src/gram/: app_menus.rs  component_preview.rs  mac_only_instance.rs  open_listener.rs
crates/html_to_markdown/: Cargo.toml
crates/http_client/: Cargo.toml
crates/http_client_tls/: Cargo.toml
crates/http_client_tls/src/: http_client_tls.rs
crates/icons/: Cargo.toml
crates/image_viewer/: Cargo.toml
crates/inspector_ui/: Cargo.toml
crates/install_cli/: Cargo.toml
crates/install_cli/src/: install_cli_binary.rs  register_uri_scheme.rs
crates/journal/: Cargo.toml
crates/json_schema_store/: Cargo.toml
crates/keymap_editor/: Cargo.toml
crates/language/: Cargo.toml
crates/language_extension/: Cargo.toml
crates/language_selector/: Cargo.toml
crates/language_tools/: Cargo.toml
crates/languages/: Cargo.toml
crates/line_ending_selector/: Cargo.toml
crates/lsp/: Cargo.toml
crates/markdown/: Cargo.toml
crates/markdown_preview/: Cargo.toml
crates/media/: Cargo.toml
crates/menu/: Cargo.toml
crates/migrator/: Cargo.toml
crates/migrator/src/: migrations.rs  migrator.rs
crates/migrator/src/migrations/m_0001/: settings.rs
crates/miniprofiler_ui/: Cargo.toml
crates/miniprofiler_ui/src/: miniprofiler_ui.rs
crates/multi_buffer/: Cargo.toml
crates/nc/: Cargo.toml
crates/net/: Cargo.toml
crates/node_runtime/: Cargo.toml
crates/notifications/: Cargo.toml
crates/notifications/src/: status_toast.rs
crates/onboarding/: Cargo.toml
crates/outline/: Cargo.toml
crates/outline_panel/: Cargo.toml
crates/panel/: Cargo.toml
crates/paths/: Cargo.toml
crates/paths/src/: paths.rs
crates/picker/: Cargo.toml
crates/picker/src/: picker.rs
crates/prettier/: Cargo.toml
crates/project/: Cargo.toml
crates/project_benchmarks/: Cargo.toml
crates/project_panel/: Cargo.toml
crates/project_symbols/: Cargo.toml
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: call.proto  core.proto  gram.proto  worktree.proto
crates/proto/src/: proto.rs  typed_envelope.rs
crates/recent_files/: Cargo.toml
crates/recent_projects/: Cargo.toml
crates/refineable/: Cargo.toml
crates/release_channel/: Cargo.toml
crates/remote/: Cargo.toml
crates/remote_server/: Cargo.toml  build.rs
crates/repl/: Cargo.toml
crates/ui/: Cargo.toml
docs/: completions.md  configuring-gram.md  debugger.md  development.md  git.md  globs.md  i-cant-open-any-files.md  index.md  key-bindings.md  languages.md  linux.md  mission.md  remote-development.md  supertab.md  tasks.md  troubleshooting.md  uninstall.md  vim.md  visual-customization.md
script/: bundle-linux  bundle-mac  bundle-windows.ps1  generate-licenses  install-linux  install.sh  linux  prepare-ci  release-mac  snap-build
(+421 files in other folders)
