[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/cli.rs"
doctest = false

[[bin]]
name = "cli"
path = "src/main.rs"

[features]
no-bundled-uninstall = []
default = []

[dependencies]
anyhow.workspace = true
askpass.workspace = true
clap.workspace = true
collections.workspace = true
ipc-channel = "0.19"
parking_lot.workspace = true
paths.workspace = true
release_channel.workspace = true
serde.workspace = true
util.workspace = true
tempfile.workspace = true
rayon.workspace = true

[dev-dependencies]
serde_json.workspace = true
util = { workspace = true, features = ["test-support"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
exec.workspace = true
fork.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation.workspace = true
objc2-core-services.workspace = true
plist = "1.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true
