[package]
name = "clock"
version.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/clock.rs"
doctest = false

[features]
test-support = ["dep:parking_lot"]

[dependencies]
parking_lot = { workspace = true, optional = true }
serde.workspace = true
smallvec.workspace = true
