[package]
name = "collections"
version.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
license = "Apache-2.0"
description = "Standard collection type re-exports used by Gram and GPUI"

[lints]
workspace = true

[lib]
path = "src/collections.rs"
doctest = false

[features]
test-support = []

[dependencies]
indexmap.workspace = true
rustc-hash.workspace = true
