[package]
name = "command_palette_hooks"
version.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/command_palette_hooks.rs"
doctest = false

[dependencies]
collections.workspace = true
derive_more.workspace = true
gpui.workspace = true
workspace.workspace = true
