[package]
name = "debug_adapter_extension"
version.workspace = true
repository.workspace = true
license = "GPL-3.0-or-later"
publish.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
collections.workspace = true
dap.workspace = true
extension.workspace = true
gpui.workspace = true
serde_json.workspace = true
util.workspace = true
task.workspace = true

[lints]
workspace = true

[lib]
path = "src/debug_adapter_extension.rs"
