[package]
name = "debugger_tools"
version.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/debugger_tools.rs"
doctest = false

[features]
test-support = []

[dependencies]
anyhow.workspace = true
dap.workspace = true
editor.workspace = true
futures.workspace = true
gpui.workspace = true
project.workspace = true
serde_json.workspace = true
settings.workspace = true
smol.workspace = true
util.workspace = true
workspace.workspace = true
