[package]
name = "encoding_selector"
version.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/encoding_selector.rs"
doctest = false

[dependencies]
editor.workspace = true
encoding_rs.workspace = true
gpui.workspace = true
ui.workspace = true
workspace.workspace = true
