[package]
name = "fs"
version.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/fs.rs"

[dependencies]
anyhow.workspace = true
async-tar.workspace = true
async-trait.workspace = true
collections.workspace = true
futures.workspace = true
git.workspace = true
gpui.workspace = true
ignore.workspace = true
is_executable.workspace = true
libc.workspace = true
log.workspace = true
notify.workspace = true
parking_lot.workspace = true
paths.workspace = true
proto.workspace = true
rope.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
tempfile.workspace = true
text.workspace = true
time.workspace = true
trash.workspace = true
util.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
git = { workspace = true, features = ["test-support"] }

[features]
test-support = ["gpui/test-support", "git/test-support"]
