[package]
name = "fuzzy"
version.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/fuzzy.rs"
doctest = false

[dependencies]
gpui.workspace = true
util.workspace = true
log.workspace = true

[dev-dependencies]
util = {workspace = true, features = ["test-support"]}
