[package]
name = "gpui_tokio"
version.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/gpui_tokio.rs"
doctest = false

[dependencies]
anyhow.workspace = true
util.workspace = true
gpui.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
