[package]
description = "What cannot be mended must be transcended."
edition.workspace = true
name = "gram"
version.workspace = true
repository.workspace = true
publish.workspace = true
authors.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[[bin]]
name = "gram"
path = "src/gram-main.rs"

[lib]
name = "gram"
path = "src/main.rs"

[dependencies]
activity_indicator.workspace = true
anyhow.workspace = true
askpass.workspace = true
assets.workspace = true
bitcode.workspace = true
breadcrumbs.workspace = true
clap.workspace = true
cli.workspace = true
client.workspace = true
collections.workspace = true
command_palette.workspace = true
component.workspace = true
crashes.workspace = true
dap_adapters.workspace = true
db.workspace = true
debug_adapter_extension.workspace = true
debugger_tools.workspace = true
debugger_ui.workspace = true
diagnostics.workspace = true
docs.workspace = true
editor.workspace = true
encoding_selector.workspace = true
env_logger.workspace = true
extension.workspace = true
extension_host.workspace = true
extensions_ui.workspace = true
file_finder.workspace = true
fs.workspace = true
futures.workspace = true
git.workspace = true
git_graph.workspace = true
git_hosting_providers.workspace = true
git_ui.workspace = true
go_to_line.workspace = true
system_specs.workspace = true
gpui = { workspace = true, features = [
    "wayland",
    "x11",
    "font-kit",
    "windows-manifest",
] }
gpui_tokio.workspace = true
rayon.workspace = true

image_viewer.workspace = true
inspector_ui.workspace = true
install_cli.workspace = true
journal.workspace = true
json_schema_store.workspace = true
keymap_editor.workspace = true
language.workspace = true
language_extension.workspace = true
language_selector.workspace = true
language_tools.workspace = true
languages = { workspace = true, features = ["load-grammars"] }
line_ending_selector.workspace = true
log.workspace = true
markdown.workspace = true
markdown_preview.workspace = true
menu.workspace = true
migrator.workspace = true
miniprofiler_ui.workspace = true
mimalloc = { version = "0.1", optional = true }
nc.workspace = true
node_runtime.workspace = true
notifications.workspace = true
onboarding.workspace = true
outline.workspace = true
outline_panel.workspace = true
parking_lot.workspace = true
paths.workspace = true
picker.workspace = true
profiling.workspace = true
project.workspace = true
project_panel.workspace = true
project_symbols.workspace = true
recent_files.workspace = true
recent_projects.workspace = true
regex.workspace = true
release_channel.workspace = true
remote.workspace = true
repl.workspace = true
reqwest_client.workspace = true
rope.workspace = true
search.workspace = true
serde.workspace = true
serde_json.workspace = true
session.workspace = true
settings.workspace = true
settings_profile_selector.workspace = true
settings_ui.workspace = true
shellexpand.workspace = true
smol.workspace = true
snippet_provider.workspace = true
snippets_ui.workspace = true
svg_preview.workspace = true
sysinfo.workspace = true
tab_switcher.workspace = true
task.workspace = true
tasks_ui.workspace = true
terminal_view.workspace = true
theme.workspace = true
theme_extension.workspace = true
theme_selector.workspace = true
time.workspace = true
title_bar.workspace = true
toolchain_selector.workspace = true
ui.workspace = true
ui_input.workspace = true
ui_prompt.workspace = true
url.workspace = true
urlencoding.workspace = true
util.workspace = true
uuid.workspace = true
vim.workspace = true
vim_mode_setting.workspace = true
watch.workspace = true
which_key.workspace = true
workspace.workspace = true
app_actions.workspace = true
zlog.workspace = true
zlog_settings.workspace = true
chrono.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true
chrono.workspace = true

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
ashpd.workspace = true

[dev-dependencies]
editor = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
image_viewer = { workspace = true, features = ["test-support"] }
itertools.workspace = true
language = { workspace = true, features = ["test-support"] }
pretty_assertions.workspace = true
project = { workspace = true, features = ["test-support"] }
terminal_view = { workspace = true, features = ["test-support"] }
tree-sitter-md.workspace = true
tree-sitter-regex.workspace = true
tree-sitter-rust.workspace = true
workspace = { workspace = true, features = ["test-support"] }

[package.metadata.bundle-dev]
icon = ["resources/app-icon-dev@2x.png", "resources/app-icon-dev.png"]
identifier = "app.liten.Gram-Dev"
name = "Gram Dev"
osx_minimum_system_version = "10.15.7"
osx_info_plist_exts = ["resources/info/*"]
osx_url_schemes = ["gram"]

[package.metadata.bundle-stable]
icon = ["resources/app-icon@2x.png", "resources/app-icon.png"]
identifier = "app.liten.Gram"
name = "Gram"
osx_minimum_system_version = "10.15.7"
osx_info_plist_exts = ["resources/info/*"]
osx_url_schemes = ["gram"]

[package.metadata.cargo-machete]
ignored = ["profiling", "zstd", "winresource"]

[package.metadata.deb]
name = "gram"
maintainer = "Kristoffer Grönlund <k@ziran.se>"
copyright = "2026, Kristoffer Grönlund"
license-file = ["../../LICENSE-GPL", "0"]
depends = "$auto"
section = "editors"
priority = "optional"

extended-description = """\
A code editor for humanoid apes and grumpy toads. \
Gram is a fork of the Zed editor."""
assets = [
    ["target/release/gram", "usr/libexec/gram-editor", "755"],
    ["target/release/cli", "usr/bin/gram", "755"],
    ["resources/gram.desktop", "usr/share/applications/app.liten.Gram.desktop", "644"],
    ["resources/app.liten.Gram.svg", "usr/share/icons/hicolor/scalable/apps/app.liten.Gram.svg", "644"],
    ["resources/app.liten.Gram-symbolic.svg", "usr/share/icons/hicolor/symbolic/apps/app.liten.Gram-symbolic.svg", "644"],
    ["../../assets/licenses.md", "usr/share/doc/gram/licenses.md", "644"],
]

[package.metadata.generate-rpm]
name = "gram"
summary = "A code editor for humanoid apes and grumpy toads"
url = "https://gram-editor.com"
assets = [
    { source = "target/release/gram", dest = "/usr/libexec/gram-editor", mode = "755" },
    { source = "target/release/cli", dest = "/usr/bin/gram", mode = "755" },
    { source = "resources/gram.desktop", dest = "/usr/share/applications/app.liten.Gram.desktop", mode = "644" },
    { source = "resources/app.liten.Gram.svg", dest = "/usr/share/icons/hicolor/scalable/apps/app.liten.Gram.svg", mode = "644" },
    { source = "resources/app.liten.Gram-symbolic.svg", dest = "/usr/share/icons/hicolor/symbolic/apps/app.liten.Gram-symbolic.svg", mode = "644" },
    { source = "assets/licenses.md", dest = "/usr/share/doc/gram/licenses.md", mode = "644", doc = true },
]
