[package]
name = "install_cli"
version.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/install_cli.rs"

[features]
test-support = []

[dependencies]
anyhow.workspace = true
gpui.workspace = true
release_channel.workspace = true
smol.workspace = true
util.workspace = true
workspace.workspace = true
