[package]
name = "miniprofiler_ui"
version.workspace = true
repository.workspace = true
publish.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/miniprofiler_ui.rs"

[dependencies]
gpui.workspace = true
app_actions.workspace = true
workspace.workspace = true
settings.workspace = true
util.workspace = true
serde_json.workspace = true
smol.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
