[package]
name = "nc"
version.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/nc.rs"
doctest = false

[dependencies]
anyhow.workspace = true
futures.workspace = true
net.workspace = true
smol.workspace = true
