[package]
name = "net"
version.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/net.rs"
doctest = false

[dependencies]
smol.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
async-io = "2.4"
windows.workspace = true

[dev-dependencies]
tempfile.workspace = true
