[package]
name = "notifications"
version.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/notifications.rs"
doctest = false

[features]
test-support = [
    "gpui/test-support",
]

[dependencies]
component.workspace = true
gpui.workspace = true
ui.workspace = true
workspace.workspace = true
app_actions.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
