[package]
name = "paths"
version.workspace = true
repository.workspace = true
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[features]
test-support = []

[lib]
path = "src/paths.rs"

[dependencies]
dirs.workspace = true
ignore.workspace = true
util.workspace = true
