[package]
description = "Shared protocol for communication between the Gram app and the remote editing server"
edition.workspace = true
name = "proto"
version = "0.1.0"
publish.workspace = true
license = "GPL-3.0-or-later"

[features]
test-support = []

[lints]
workspace = true

[lib]
path = "src/proto.rs"
doctest = false

[dependencies]
anyhow.workspace = true
prost.workspace = true
serde.workspace = true

[build-dependencies]
protobuf-src.workspace = true
prost-build.workspace = true

[package.metadata.cargo-machete]
ignored = ["prost-build", "protobuf-src"]
